"badge" style update

--- a/src/html/benefit/SCR_GA_BN_0101_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0101_M01.html
@@ -40,7 +40,7 @@
                                             </div>
                                             <div class="effective-date">
                                                 <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                                <span class="badge pink sm">D-7</span>
+                                                <span class="badge solid pink sm">D-7</span>
                                             </div>
                                         </div>
                                     </a>
@@ -57,7 +57,7 @@
                                             </div>
                                             <div class="effective-date">
                                                 <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                                <span class="badge green sm">D-60</span>
+                                                <span class="badge solid green sm">D-60</span>
                                             </div>
                                         </div>
                                     </a>
@@ -74,7 +74,7 @@
                                             </div>
                                             <div class="effective-date">
                                                 <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                                <span class="badge green sm">D-60</span>
+                                                <span class="badge solid green sm">D-60</span>
                                             </div>
                                         </div>
                                     </a>
@@ -91,7 +91,7 @@
                                             </div>
                                             <div class="effective-date">
                                                 <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                                <span class="badge green sm">D-60</span>
+                                                <span class="badge solid green sm">D-60</span>
                                             </div>
                                         </div>
                                     </a>
