--- a/src/html/customer/SCR_GA_CS_0201_T01.html
+++ b/src/html/customer/SCR_GA_CS_0201_T01.html
@@ -78,7 +78,7 @@
                                 </ul>
                             </div>
                             <div class="tip-wrap mt24">
-                                <span class="badge green square lg">TIP</span>
+                                <span class="badge solid green square lg">TIP</span>
                                 <p>그린카는 친구추천, 매너평가, 세차인증 등을 통해
                                     다양한 혜택을 제공합니다. 
                                     </p>
