--- a/src/html/customer/SCR_GA_CS_0701_M01_02.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_02.html
@@ -15,7 +15,7 @@
             <ul>
                 <li class="item">
                     <a href="#">
-                        <div class="badge green lg">
+                        <div class="badge solid green lg">
                             <i class="ico round-trip sm"></i>
                             <span class="text">왕복</span>
                         </div>
@@ -28,7 +28,7 @@
                 </li>
                 <li class="item">
                     <a href="#">
-                        <div class="badge lg">
+                        <div class="badge solid lg">
                             <i class="ico one-way sm"></i>
                             <span class="text">편도</span>
                         </div>
@@ -40,7 +40,7 @@
                 </li>
                 <li class="item">
                     <a href="#">
-                        <div class="badge green lg">
+                        <div class="badge solid green lg">
                             <i class="ico round-trip sm"></i>
                             <span class="text">왕복</span>
                         </div>
@@ -53,7 +53,7 @@
                 </li>
                 <li class="item">
                     <a href="#">
-                        <div class="badge green lg">
+                        <div class="badge solid green lg">
                             <i class="ico round-trip sm"></i>
                             <span class="text">왕복</span>
                         </div>
