--- a/src/html/mypage/SCR_GA_CI_0501_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0501_M01.html
@@ -47,7 +47,7 @@
                                         <p>[매일] 월화수목금토일 언제나 50% 할인</p>
                                         <div class="effective-date">
                                             <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                            <span class="badge pink sm">D-7</span>
+                                            <span class="badge solid pink sm">D-7</span>
                                         </div>
                                     </div>
                                     <div class="coupon-item">
@@ -59,7 +59,7 @@
                                         <p>금연 서약한 당신을 위해!</p>
                                         <div class="effective-date">
                                             <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                            <span class="badge green sm">D-35</span>
+                                            <span class="badge solid green sm">D-35</span>
                                         </div>
                                     </div>
                                     <div class="coupon-item expired">
@@ -71,7 +71,7 @@
                                         <p>[매일] 월화수목금토일 언제나 50% 할인</p>
                                         <div class="effective-date">
                                             <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                            <span class="badge pink sm">D-7</span>
+                                            <span class="badge solid pink sm">D-7</span>
                                         </div>
                                     </div>
                                     <div class="coupon-item">
@@ -83,7 +83,7 @@
                                         <p>[매일] 월화수목금토일 언제나 50% 할인</p>
                                         <div class="effective-date">
                                             <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                            <span class="badge green sm">D-365</span>
+                                            <span class="badge solid green sm">D-365</span>
                                         </div>
                                     </div>
                                 </div>
