--- a/src/html/status/SCR_GA_AR_0202_P05.html
+++ b/src/html/status/SCR_GA_AR_0202_P05.html
@@ -159,7 +159,7 @@
 					전달사항
 				</h4>
 	
-				<ol class="list-number">
+				<!-- <ol class="list-number">
 					<li>
 						1. 사고발생으로 인한 이용정지는 총 청구금액 입금이 확인 될 때까지 이용 정지됩니다. (단, 금지 행위로 인한 사고의 경우 이용이 불가능할 수 있습니다.)
 					</li>
@@ -171,6 +171,20 @@
 					</li>
 					<li>
 						4. ㈜그린카는 롯데렌탈㈜로부터 본 안내 업무를 위탁 받아 실행합니다.<br>(결제 관련 문의 : 02-528-7794 / 7799)
+					</li>
+				</ol> -->
+				<ol class="list numeric sm mt8">
+					<li>
+						사고발생으로 인한 이용정지는 총 청구금액 입금이 확인 될 때까지 이용 정지됩니다. (단, 금지 행위로 인한 사고의 경우 이용이 불가능할 수 있습니다.)
+					</li>
+					<li>
+						본 안내서 발송일로부터 1주일 이상 미 입금시 신용정보사 이관 및 신용상의 불이익을 받을 수 있습니다.
+					</li>
+					<li>
+						수리비용 (면책금) 및 휴차보상료는 세법상 세금계산서 또는 현금영수증 발행이 불가 하오니 이점 양지바랍니다. (부가가치세법 기본통칙 1-0-2)
+					</li>
+					<li>
+						㈜그린카는 롯데렌탈㈜로부터 본 안내 업무를 위탁 받아 실행합니다.<br>(결제 관련 문의 : 02-528-7794 / 7799)
 					</li>
 				</ol>
 			</div>
