--- a/src/html/benefit/SCR_GA_BN_0201_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0201_M01.html
@@ -66,7 +66,7 @@
                                                 </div>
                                                 <div class="effective-date">
                                                     <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                    <span class="badge pink sm">D-7</span>
+                                                    <span class="badge solid pink sm">D-7</span>
                                                 </div>
                                             </a>
                                             <button class="btn icon md">
@@ -85,7 +85,7 @@
                                             </div>
                                                 <div class="effective-date">
                                                     <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                    <span class="badge green sm">D-35</span>
+                                                    <span class="badge solid green sm">D-35</span>
                                                 </div>
                                             </a>
                                             <button class="btn icon md">
@@ -104,7 +104,7 @@
                                             </div>
                                                 <div class="effective-date">
                                                     <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                    <span class="badge pink sm">D-7</span>
+                                                    <span class="badge solid pink sm">D-7</span>
                                                 </div>
                                             </a>
                                             <button class="btn icon md">
