--- a/src/html/benefit/SCR_GA_BN_0306_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0306_M01.html
@@ -45,7 +45,7 @@
                                            </div>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge pink sm">D-7</span>
+                                                <span class="badge solid pink sm">D-7</span>
                                             </div>
                                             <button class="btn icon md">
                                                 <i class="ico download lg"></i>
@@ -62,7 +62,7 @@
                                            </div>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge green sm">D-35</span>
+                                                <span class="badge solid green sm">D-35</span>
                                             </div>
                                             <button class="btn icon md">
                                                 <i class="ico check-second xl"></i>
@@ -79,7 +79,7 @@
                                            </div>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge green sm">D-7</span>
+                                                <span class="badge solid green sm">D-7</span>
                                             </div>
                                             <button class="btn icon md">
                                                 <i class="ico download lg"></i>
