--- a/src/html/customer/SCR_GA_CS_0601_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_01.html
@@ -22,19 +22,25 @@
                                 <p>온라인서류제출 신청안내 확인 후, 기재 등록해주세요</p>
                                 <p>서류제출 사유를 자세히 입력해주시면, 보다 빠른 업무처리가 가능합니다.</p>
                             </div>
-                            <h4>개인정보 수집 이용 및 제공 동의 (필수)</h4>
-                            <div class="terms">
-                                <a href="#" class="item"> <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i> </a>
-                            </div>
-                            <div class="agree-group grid-flex mt16">
-                                <label for="tmpRadio01" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="" />
-                                    <span>동의</span>
-                                </label>
-                                <label for="tmpRadio02" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio02" />
-                                    <span>미동의</span>
-                                </label>
+                            <div class="agree-group mt24">
+                                <div class="item check-all">
+                                    <label for="tmpCheckbook4" class="gc-checkbox round">
+                                        <input type="checkbox" id="tmpCheckbook4" checked />
+                                        <span>개인정보 수집 이용 및 제공 동의</span>
+                                    </label>
+                                </div>
+                                <div class="agree-module">
+                                    <div class="item active">
+                                        <button type="button" class="btn-check">
+                                            <i class="ico ico-check md"></i>
+                                        </button>
+                                        <a href="#">
+                                            <span class="emp">필수</span>
+                                            <span class="text">개인정보 수집 이용 및 제공 동의</span>
+                                            <i class="ico next-sm md"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </section>
                         <hr class="divider" />
