--- a/src/html/customer/SCR_GA_CS_0701_M01.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01.html
@@ -29,19 +29,25 @@
                                 <p>모바일 문의 상담시간은 09:00~18:00 입니다.</p>
                                 <p>문의 유형에 따라 [작성유의사항]이 있으니, 확인 후 정확한 정보를 입력해주시면 보다 빠른 답변이 가능합니다.</p>
                             </div>
-                            <h4>개인정보 수집 이용 및 제공 동의 (필수)</h4>
-                            <div class="terms">
-                                <a href="#" class="item"> <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i> </a>
-                            </div>
-                            <div class="agree-group grid-flex mt16">
-                                <label for="tmpRadio01" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="" />
-                                    <span>동의</span>
-                                </label>
-                                <label for="tmpRadio02" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio02" />
-                                    <span>미동의</span>
-                                </label>
+                            <div class="agree-group mt24">
+                                <div class="item check-all">
+                                    <label for="tmpCheckbook4" class="gc-checkbox round">
+                                        <input type="checkbox" id="tmpCheckbook4" checked />
+                                        <span>개인정보 수집 이용 및 제공 동의</span>
+                                    </label>
+                                </div>
+                                <div class="agree-module">
+                                    <div class="item active">
+                                        <button type="button" class="btn-check">
+                                            <i class="ico ico-check md"></i>
+                                        </button>
+                                        <a href="#">
+                                            <span class="emp">필수</span>
+                                            <span class="text">개인정보 수집 이용 및 제공 동의</span>
+                                            <i class="ico next-sm md"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </section>
                         <hr class="divider" />
