--- a/src/html/customer/SCR_GA_CS_0701_M01_04.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_04.html
@@ -27,21 +27,27 @@
                             </h3>
                             <div class="guide-box align-left mt16">
                                 <p>모바일 문의 상담시간은 09:00~18:00 입니다.</p>
-                                <p>문의 유형에 따라 [작성유의사항]이 있으니, 확인 후 정확한 정보를 입력해주시면 보다 빠른 답변이 가능합니다.</p>
+                                <p>문의 유형에 따라 [작성유의사항]이 있으니, 확인 후 정확한 정보를 입력해주시면 보다 빠른 답변이 가능합니다.</p>
                             </div>
-                            <h4>개인정보 수집 이용 및 제공 동의 (필수)</h4>
-                            <div class="terms">
-                                <a href="#" class="item"> <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i> </a>
-                            </div>
-                            <div class="agree-group grid-flex mt16">
-                                <label for="tmpRadio01" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="" />
-                                    <span>동의</span>
-                                </label>
-                                <label for="tmpRadio02" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio02" />
-                                    <span>미동의</span>
-                                </label>
+                            <div class="agree-group mt24">
+                                <div class="item check-all">
+                                    <label for="tmpCheckbook4" class="gc-checkbox round">
+                                        <input type="checkbox" id="tmpCheckbook4" checked />
+                                        <span>개인정보 수집 이용 및 제공 동의</span>
+                                    </label>
+                                </div>
+                                <div class="agree-module">
+                                    <div class="item active">
+                                        <button type="button" class="btn-check">
+                                            <i class="ico ico-check md"></i>
+                                        </button>
+                                        <a href="#">
+                                            <span class="emp">필수</span>
+                                            <span class="text">개인정보 수집 이용 및 제공 동의</span>
+                                            <i class="ico next-sm md"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </section>
                         <hr class="divider" />
@@ -72,12 +78,29 @@
                         </section>
                         <hr class="divider" />
                         <section>
-                            <ul class="tmp-faq-list">
-                                <li>
-                                    <button type="button">작성시 유의사항 보기<i class="ico arrow-bot md"></i></button>
-                                   
-                                </li>
-                            </ul>
+                            <div class="ui-accodion">
+                                <ul>
+                                    <li>
+                                        <div class="ctr">
+                                            <button type="button" class="btn-acco">
+                                                <p>작성시 유의사항 보기</p>
+                                                <i class="ico arrow-bot-nav030 lg"></i>
+                                            </button>
+                                        </div>
+                                        <div class="layer">
+                                            <div class="layer-cont">
+                                                <ul class="list sm numeric">
+                                                    <li>흡연사진을 촬영하여 등록해주시면 이전 사용자의 페널티 적용이 원활하게 진행됩니다.</li>
+                                                    <li>
+                                                        접수 내용이 누락되거나 촬영 · 접수된 흡연 사진이 접수된 사진이 불분명한 경우 페널티 부과 및 신고 보상 포인트 지급이 어려운 점 양해 부탁드립니다.
+                                                    </li>
+                                                    <li>사진 촬영 시 유의사항 (흡연장면, 그린카 차량표시, 차량번호)</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="btn-group mt24">
                                 <button type="button" class="btn green lg">접수하기</button>
                             </div>
@@ -88,4 +111,87 @@
             <!-- //container -->
         </div>
     </body>
+    <script type="text/javascript">
+        /* 아코디언 */
+        const getElIndex = (element, range) => {
+            if (!!range) return [].indexOf.call(element, range);
+            return [].indexOf.call(element.parentNode.children, element);
+        };
+        const uiAccodion = (() => {
+            let el, btnEl, layerEl, prevEl, liEl;
+            let idx, layerLgt, duration, layerHeight, elCheck;
+            let isclick;
+
+            const init = () => {
+                el = document.querySelector(".ui-accodion");
+                btnEl = el.querySelectorAll(".btn-acco");
+                layerEl = el.querySelectorAll(".layer");
+                liEl = el.querySelectorAll("li");
+
+                layerLgt = layerEl.length;
+                duration = 300;
+                isclick = true;
+
+                bindEvent();
+            };
+
+            const bindEvent = () => {
+                clickEvent();
+            };
+
+            const clickEvent = () => {
+                [].forEach.call(btnEl, (e) => {
+                    e.addEventListener("click", (event) => {
+                        prevEl = layerEl[idx];
+                        event.preventDefault();
+                        idx = getElIndex(btnEl, e);
+                        elCheck = prevEl !== layerEl[idx] && prevEl !== undefined;
+                        if (isclick) {
+                            isclick = false;
+                            if (!e.closest("li").classList.contains("active")) {
+                                for (let i = 0; liEl.length > i; i++) {
+                                    liEl[i].classList.remove("active");
+                                }
+                                e.closest("li").classList.add("active");
+                            } else {
+                                e.closest("li").classList.remove("active");
+                            }
+
+                            if (!layerEl[idx].style.height) {
+                                if (elCheck) remove(prevEl);
+
+                                layerEl[idx].style.display = "block";
+                                layerHeight = layerEl[idx].clientHeight;
+                                layerEl[idx].style.height = "0";
+
+                                setTimeout(() => {
+                                    layerEl[idx].style.height = layerHeight + "px";
+                                });
+                            } else {
+                                remove(layerEl[idx]);
+                            }
+
+                            setTimeout(function () {
+                                isclick = true;
+                            }, duration);
+                        }
+                    });
+                });
+
+                const remove = (el) => {
+                    el.style.height = "0";
+                    setTimeout(() => {
+                        el.style = null;
+                    }, duration);
+                };
+            };
+
+            return {
+                init: init,
+            };
+        })();
+
+        uiAccodion.init();
+        /* 아코디언 여기까지 */
+    </script>
 </html>
