--- a/src/html/mypage/SCR_GA_CI_0401_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0401_M01.html
@@ -136,7 +136,7 @@
 											</div>
 											<div class="effective-date">
 												<span class="date">2022.04.01 ~ 2022.04.30</span>
-												<span class="badge pink sm">D-7</span>
+												<span class="badge solid pink sm">D-7</span>
 											</div>
 										</a>
 										<button class="btn icon md">
@@ -155,7 +155,7 @@
 										</div>
 											<div class="effective-date">
 												<span class="date">2022.04.01 ~ 2022.04.30</span>
-												<span class="badge green sm">D-35</span>
+												<span class="badge solid green sm">D-35</span>
 											</div>
 										</a>
 										<button class="btn icon md">
@@ -174,7 +174,7 @@
 										</div>
 											<div class="effective-date">
 												<span class="date">2022.04.01 ~ 2022.04.30</span>
-												<span class="badge pink sm">D-7</span>
+												<span class="badge solid pink sm">D-7</span>
 											</div>
 										</a>
 										<button class="btn icon md">
