팝업 공통 수정 및 페이지 수정

--- a/src/html/etc/SCR_GA_ER_0202_M01.html
+++ b/src/html/etc/SCR_GA_ER_0202_M01.html
@@ -1,6 +1,6 @@
 <div class="layer-wrap etc">
 	<div class="layer-header">
-		<p class="title">장애신고 접수</p>
+		<p class="title">장애신고 접수장애신고 접수장애신고 접수장애신고 접수장애신고 접수</p>
 		<button type="button" class="layer-close">
 			<i class="ico close lg"></i>
 			<span class="hide-txt">닫기</span>
