무료편도 예약하기

--- a/src/status.html
+++ b/src/status.html
@@ -2502,10 +2502,10 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/fo</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/fo/SCR_GA_FO_0301_M01.html">SCR_GA_FO_0301_M01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2722,10 +2722,10 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/etc</td>
 							<td><a target="_blank" href="components/popup_module.html#etc#SCR_GA_ER_0202_M01#bottom">SCR_GA_ER_0202_M01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl">
 								20220831
@@ -2740,7 +2740,7 @@
 							<td></td>
 							<td></td>
 							<td>/etc</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" class="througt" href="html/.html">.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
