--- a/src/html/reservation/SCR_GA_RV_0203_M01_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0203_M01_P01.html
@@ -1,24 +1,21 @@
 <div class="layer-wrap rsv-one-way">
 	<!-- 20220808 -->
 	<div class="layer-header">
-		<h2 class="title">무료편도를 이용하실 수 있습니다</h2>
-		<button type="button" class="layer-close">
-			<i class="ico close lg"></i>
-			<span class="hide-txt">닫기</span>
-		</button>
+		<p class="title">무료편도를 이용하실 수 있습니다</p>
 	</div>
 	<div class="layer-body">
 		<div class="one-way">
 			<p class="desc">주변 그린존에 바로 출발 가능한 무료편도가 있습니다. 무료편도는 대여요금, 주행요금, 보험료가 무료입니다!</p>
-
-			<div class="btn-wrap">
-				<div class="btn-group column">
-					<button type="button" class="btn lg">무료편도로 전환하기</button>
-					<button type="button" class="btn cancel lg">반납위치 보기: 한남동 1번 출구</button>
-					<button type="button" class="btn link lg">아니오</button>
-				</div>
-			</div>
 		</div>
 	</div>
 	<!-- //20220808 -->
+	<div class="layer-footer">
+		<div class="btn-wrap">
+			<div class="btn-group column">
+				<button type="button" class="btn lg">무료편도로 전환하기</button>
+				<button type="button" class="btn cancel lg">반납위치 보기: 한남동 1번 출구</button>
+				<button type="button" class="btn link lg">아니오</button>
+			</div>
+		</div>
+	</div>
 </div>
