--- a/src/status.html
+++ b/src/status.html
@@ -2628,11 +2628,11 @@
 							<td></td>
 							<td></td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#common#SCR_GA_CM_0301_T03#bottom">SCR_GA_CM_0301_T03.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
-							<td></td>
+							<td>디자인 수정후 추가 작업 필요</td>
 						</tr>
 						<tr>
 							<td></td>
@@ -2640,10 +2640,10 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#common#SCR_GA_CM_0401_M01#bottom">SCR_GA_CM_0401_M01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2654,10 +2654,10 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0501_M01.html">SCR_GA_CM_0501_M01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
