팝업 타입 여백 수정

--- a/src/html/customer/SCR_GA_CS_0601_M01_06.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_06.html
@@ -13,9 +13,9 @@
         <p>그린카에서 사진을 촬영하고 동영상을
             녹화하도록 허용하시겠습니까?</p>
             <div class="btn-group column">
-                <button class="btn line lg full">앱 사용중에만 허용</button>
-                <button class="btn line lg full">이번만 허용</button>
-                <button class="btn line lg full">허용안함</button>
+                <button class="btn line lg">앱 사용중에만 허용</button>
+                <button class="btn line lg">이번만 허용</button>
+                <button class="btn line lg">허용안함</button>
             </div>
        </div>
     </div>
