--- a/src/status.html
+++ b/src/status.html
@@ -2682,10 +2682,10 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>이민우</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#common#SCR_GA_CM_0701_M01">SCR_GA_CM_0701_M01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
