고객센터 -- 코드 정리

--- a/src/html/customer/SCR_GA_CS_0702_M01.html
+++ b/src/html/customer/SCR_GA_CS_0702_M01.html
@@ -22,7 +22,26 @@
                         </div>
                         <hr class="divider" />
                         <section>
-                            <div class="step-inquiry"></div>
+                            <div class="inquiry-step">
+                                <div class="step">
+                                    <div class="step-icon"></div>
+                                    <p>문의등록</p>
+                                </div>
+                                <div class="step-line done"></div>
+                                <div class="step done">
+                                    <div class="step-icon">
+                                        <span>2</span>
+                                    </div>
+                                    <p>답변대기</p>
+                                </div>
+                                <div class="step-line done"></div>
+                                <div class="step done">
+                                    <div class="step-icon">
+                                        <span>2</span>
+                                    </div>
+                                    <p>답변완료</p>
+                                </div>
+                            </div>
                         </section>
                         <hr class="divider" />
                         <section>
@@ -33,7 +52,7 @@
                                         <div class="title">
                                             <div class="left"><strong>예약/결제문의</strong><span class="badge solid red sm">NEW</span>
                                             </div>
-                                            <div class="right"><span class="badge line green md">답변완료</span></div>
+                                            <div class="right"><span class="badge line green lg">답변완료</span></div>
                                         </div>
                                         <div class="content">
                                             <p>
@@ -46,7 +65,7 @@
                                         <div class="date">2022.06.15 13:52</div>
                                         <div class="title">
                                             <div class="left"><strong>예약/결제문의</strong></div>
-                                            <div class="right"><span class="badge line md">답변대기</span></div>
+                                            <div class="right"><span class="badge line lg">답변대기</span></div>
                                         </div>
                                         <div class="content">
                                             <p>
@@ -59,7 +78,7 @@
                                         <div class="date">2022.06.15 13:52</div>
                                         <div class="title">
                                             <div class="left"><strong>예약/결제문의</strong></div>
-                                            <div class="right"><span class="badge line green md">답변완료</span></div>
+                                            <div class="right"><span class="badge line green lg">답변완료</span></div>
                                         </div>
                                         <div class="content">
                                             <p>
@@ -72,7 +91,7 @@
                                         <div class="date">2022.06.15 13:52</div>
                                         <div class="title">
                                             <div class="left"><strong>예약/결제문의</strong></div>
-                                            <div class="right"><span class="badge line md">답변대기</span></div>
+                                            <div class="right"><span class="badge line lg">답변대기</span></div>
                                         </div>
                                         <div class="content">
                                             <p>
