--- a/src/html/customer/SCR_GA_CS_0703_M01.html
+++ b/src/html/customer/SCR_GA_CS_0703_M01.html
@@ -17,12 +17,12 @@
                             <section>
                                 <div class="inquiry-area">
                                     <div class="date">2022.06.15 13:52</div>
-                                    <div class="title">
+                                    <div class="title-area">
                                         <div class="left"><strong>예약/결제문의</strong>
                                         </div>
-                                        <div class="right"><span class="badge line green md">답변완료</span></div>
+                                        <div class="right"><span class="badge line green lg">답변완료</span></div>
                                     </div>
-                                    <div class="content">
+                                    <div class="cont-area">
                                         <p>
                                             차량에서 용이 나오는 줄 알았어요..담배 연기가 너무 자욱해서 인근 지나가는 사람들이 마스크를 쓰고 가더라구요
                                         </p>
@@ -55,13 +55,13 @@
                                             <div class="item-preview"></div>
                                         </li>
                                     </div>
-                                    <p class="desc">10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p>
+                                    <!-- <p class="desc">10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p> -->
                                 </div>
                             </section>
                             <hr class="divider" />
                             <section>
                                 <div class="answer-area">
-                                    <div class="">관리자</div>
+                                    <h4>관리자</h4>
                                     <div class="">
                                         <p>
                                             안녕하세요.<br />
