--- a/src/html/customer/SCR_GA_CS_0601_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_01.html
@@ -63,12 +63,12 @@
                         </section>
                         <hr class="divider" />
                         <section>
-                            <h4>파일첨부</h4>
-                            <div class="">
+                            <div class="file-attach">
+                                <h4>파일첨부</h4>
                                 <div class="btn-group">
                                     <button type="button" class="btn lg"><i class="ico camera lg"></i><span class="text">첨부하기</span></button>
                                 </div>
-                                <p><i class="ico dot md"></i> <span class="text">10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</span></p>
+                                <p class="desc"><span class="text">10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</span></p>
                             </div>
                             <div class="btn-group">
                                 <button type="button" class="btn green lg">접수하기</button>
