--- a/src/html/customer/SCR_GA_CS_0701_M01_04.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_04.html
@@ -68,12 +68,12 @@
                         </section>
                         <hr class="divider" />
                         <section>
-                            <h4>파일첨부</h4>
-                            <div class="">
+                            <div class="file-attach">
+                                <h4>파일첨부</h4>
                                 <div class="btn-group">
                                     <button type="button" class="btn lg"><i class="ico camera lg"></i><span class="text">첨부하기</span></button>
                                 </div>
-                                <p>10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p>
+                                <p class="desc">10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p>
                             </div>
                         </section>
                         <hr class="divider" />
