고객센터 -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0104_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0104_M01.html
@@ -22,9 +22,10 @@
                                     <i class="ico share lg"></i>
                                 </button>
                             </div>
+                        </div>
                     </div>
                 </div>
-            </div></header>
+             </header>
             <!-- //header -->
 
             <!-- container -->
