--- a/src/html/customer/SCR_GA_CS_0701_M01_09.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_09.html
@@ -1,16 +1,19 @@
 <div class="layer-wrap">
     <div class="layer-header">
         <h5 class="title-md">사고/고장 접수 전화연결</h5>
+        <button type="button" class="layer-close">
+            <i class="ico close lg"></i>
+            <span class="hide-txt">닫기</span>
+        </button>
     </div>
 
     <div class="layer-body">
-        <div class="">
+        <div class="contact-wrap">
             <p class="text-green">1899-5454</p>
             <p>번호로 연결하시겠습니까?</p>
         </div>
-        <div class="btn-group column">
+        <div class="btn-group column mt24">
             <button class="btn lg">전화연결</button>
-            <button type="button" class="btn link lg">취소</button>
         </div>
     </div>
 </div>
