--- a/src/html/customer/SCR_GA_CS_0601_M01_06.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_06.html
@@ -1,22 +1,23 @@
 <div class="layer-wrap">
     <div class="layer-header">
-		<!-- <h5 class="title-md">문의유형 선택</h5> -->
-		<button type="button" class="layer-close">
-			<i class="ico close lg"></i>
-			<span class="hide-txt">닫기</span>
-		</button>
-	</div>
+        <h5 class="title-md">권한 허용</h5>
+        <button type="button" class="layer-close">
+            <i class="ico close lg"></i>
+            <span class="hide-txt">닫기</span>
+        </button>
+    </div>
 
     <div class="layer-body">
-       <div class="">
-        <img src="../../images/icon/icon_mark.svg" alt="">
-        <p>그린카에서 사진을 촬영하고 동영상을
-            녹화하도록 허용하시겠습니까?</p>
-            <div class="btn-group column">
-                <button class="btn line lg">앱 사용중에만 허용</button>
-                <button class="btn line lg">이번만 허용</button>
-                <button class="btn line lg">허용안함</button>
+        <div class="alert-area">
+            <div class="img">
+                <img src="../../images/icon/icon_mark.svg" alt="" />
             </div>
-       </div>
+            <p class="text mt24">그린카에서 사진을 촬영하고 동영상을 녹화하도록 허용하시겠습니까?</p>
+        </div>
+        <div class="btn-group column mt20">
+            <button class="btn line lg">앱 사용중에만 허용</button>
+            <button class="btn line lg">이번만 허용</button>
+            <button class="btn line lg">허용안함</button>
+        </div>
     </div>
 </div>
