--- a/src/status.html
+++ b/src/status.html
@@ -1897,7 +1897,7 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td>(지역선택)</td>
+                            <td>(지역입력)</td>
                             <td></td>
                             <td></td>
                             <td>박지수</td>
@@ -1913,7 +1913,7 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td>(지역입력)</td>
+                            <td>(지역선택)</td>
                             <td></td>
                             <td></td>
                             <td>박지수</td>
@@ -2243,6 +2243,20 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0702_M01.html">SCR_GA_CS_0702_M01.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>내역 없음</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0702_M01_01.html">SCR_GA_CS_0702_M01_01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
