고객센터 -- 컨텐츠 이미지 업데이트

--- a/src/html/customer/SCR_GA_CS_0401_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01_01.html
@@ -23,8 +23,11 @@
                                 </ul>
                                 <span class="tab-indicator"></span>
                             </div>
-                            <div class="ip-textarea">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="예시"></textarea>
+                            <div class="example-area">
+                                <em>예시</em>
+                                <div class="img">
+                                    <img src="/images/contents/img_driver_license_02.svg" alt="" />
+                                </div>
                             </div>
 							<!-- 20220831 -->
 							<div class="ip-group">
