--- a/src/html/customer/SCR_GA_CS_0401_M01.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01.html
@@ -23,19 +23,22 @@
                                 </ul>
                                 <span class="tab-indicator"></span>
                             </div>
-                            <div class="ip-textarea">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="예시"></textarea>
+                            <div class="example-area">
+                                <em>예시</em>
+                                <div class="img">
+                                    <img src="/images/contents/img_driver_license_01.svg" alt="" />
+                                </div>
                             </div>
-							<!-- 20220831 -->
+                            <!-- 20220831 -->
                             <div class="ip-group">
-								<div class="row">
-									<div class="module-ip">
-										<input id="ip01" type="text" class="ip-txt" placeholder="-없이 입력해주세요">
-										<div class="line"></div>
-									</div>
-								</div>
-							</div>
-							<!-- //20220831 -->
+                                <div class="row">
+                                    <div class="module-ip">
+                                        <input id="ip01" type="text" class="ip-txt" placeholder="-없이 입력해주세요" />
+                                        <div class="line"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- //20220831 -->
                             <div class="btn-group">
                                 <button type="button" class="btn green lg">조회</button>
                             </div>
