--- a/src/html/mypage/SCR_GA_CI_0401_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0401_M01.html
@@ -23,7 +23,9 @@
 							<div class="rating">
 								<button class="btn-link" type="button">
 									등급안내
-									<i class="ico arrow-right-nav050 xs"></i>
+									<!-- 20220905 -->
+									<i class="ico arrow-right-nav040 xs"></i>
+									<!-- //20220905 -->
 								</button>
 								<div class="ui-svg-chart">
 									<div class="circle-progress-wrap">
@@ -247,6 +249,8 @@
 					</div>
 				</div>
 
+				<!-- 20220905 -->
+				@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"저장하기"})
 			</div>
 		</section>
 		<!-- //container -->
