--- a/src/html/mypage/SCR_GA_CI_0401_P01.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P01.html
@@ -4,15 +4,16 @@
         <!-- <button type="button" class="layer-close" >닫기</button> -->
     </div>
     <div class="layer-body">
-        <div class="wrap">
-            <p class="title-sm">등급UP 미션</p>
+		<!-- 20220905 -->
+        <div class="wrap level-up">
+			<p class="desc emp">등급UP 미션</p>
             <div class="img-area al-center">
-                <img src="/images/contents/level_up_mission_01.svg" alt="" />
+				<img src="/images/contents/level_up_mission_01.svg" alt="" />
             </div>
-            <p>전기차 대여 예약 후, 정상 운행 및 반납 완료되어야 등급UP 할 수 있어요!</p>
-            <br />
-            <p>하이브리드 차량은 해당되지 않아요!</p>
+            <p class="desc">전기차 대여 예약 후, 정상 운행 및 반납 완료되어야 등급UP 할 수 있어요!</p>
+            <p class="desc">하이브리드 차량은 해당되지 않아요!</p>
         </div>
+		<!-- //20220905 -->
     </div>
     <div class="layer-footer">
         <div class="btn-wrap">
