--- a/src/html/mypage/SCR_GA_CI_0401_P02.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P02.html
@@ -26,7 +26,9 @@
                         </li>
                     </ul>
                 </div>
-                <p>다음 마스터 등급까지는 1,000시간 남았습니다.</p>
+				<!-- 20220905 -->
+                <p class="desc">다음 마스터 등급까지는 1,000시간 남았습니다.</p>
+				<!-- //20220905 -->
             </div>
         </div>
     </div>
