--- a/src/html/mypage/SCR_GA_CI_0401_P04.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P04.html
@@ -10,7 +10,8 @@
 	<div class="layer-body">
 		<div class="benefit-info">
 			
-			<ul class="txt-list dot">
+			<!-- 20220905 -->
+			<ul class="list">
 				<li>
 					멤버십 등급은 누적 이용(대여) 시간 기준으로 반영됩니다.
 				</li>
@@ -42,6 +43,7 @@
 					주행거리 리워드 혜택은 1회 대여 시 100km 이상 주행한 경우 지급 대상이 되며, 대여 완료 시의 등급에 따라 차등 지급됩니다. (브론즈 1등급 이상부터 해당, 차종 무관)
 				</li>
 			</ul>
+			<!-- //20220905 -->
 		</div>
 	</div>
 </div>
