--- a/src/html/mypage/SCR_GA_CI_0501_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0501_M01.html
@@ -18,12 +18,19 @@
                     <div class="cont coupon">
                         <section class="section">
                             <div class="section-cont">
+								<!-- 20220906 -->
                                 <div class="ip-group">
-                                    <div class="row">
-                                        <input type="text" placeholder="쿠폰 번호 입력" />
-                                        <button class="btn primary md"><span class="text">쿠폰등록</span></button>
+									<div class="row join">
+										<div class="module-ip">
+											<input type="text" class="ip-txt" placeholder="쿠폰 번호 입력">
+											<div class="line"></div>
+										</div>
+										<div class="module-btn">
+											<button class="btn md">쿠폰등록</button>
+										</div>
                                     </div>
                                 </div>
+								<!-- //20220906 -->
                             </div>
                         </section>
                         <hr class="divider" />
