--- a/src/html/reservation/SCR_GA_RV_0204_M01_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0204_M01_P01.html
@@ -13,11 +13,11 @@
 			</div>
 		</div>
 	</div>
-	<!-- 20220818 -->
-	<div class="layer-footer full">
+	<!-- 20220905 -->
+	<div class="layer-footer">
 		<div class="btn-wrap">
 			<div class="btn-group">
-				<button type="button" class="btn xl">선택</button>
+				<button type="button" class="btn lg">선택</button>
 			</div>
 		</div>
 	</div>
