--- a/src/html/status/SCR_GA_AR_0101_M01.html
+++ b/src/html/status/SCR_GA_AR_0101_M01.html
@@ -21,6 +21,19 @@
 							</ul>
 						</div>
 
+						<!-- 20220905 -->
+						<div class="title-area grid-flex">
+							<div class="flex">
+								<h3 class="title-sm">사고처리 절차</h3>
+							</div>
+							<div class="flex">
+								<button type="button" class="btn-more">
+									<i class="ico icon-tip-navy040 md"></i>
+									<span class="under">보험안내</span>
+								</button>
+							</div>
+						</div>
+						<!-- //20220905 -->
 						<div class="status-step">
 							<div class="grid-flex">
 								<div class="flex step01">
@@ -55,16 +68,11 @@
 								<img src="/images/contents/img_status_guide06.png" alt="사고부위 근접 촬영 B (위와 반대 방향)">
 							</div>
 						</div>
-
-						
-					</div>
-					<div class="btn-wrap">
-						<div class="btn-group">
-							<button type="button" class="btn xl full">사고접수 전화연결</button>
-						</div>
 					</div>
 
-                </div>
+					<!-- 20220905 -->
+					@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"저장하기"})
+				</div>
             </section>
             <!-- //container -->
         </div>
