--- a/src/html/ct/SCR_GA_CT_0602_P02.html
+++ b/src/html/ct/SCR_GA_CT_0602_P02.html
@@ -9,7 +9,7 @@
 	<div class="layer-body">
 
 		<div class="survey-cont">
-
+			<lottie-player	lottie-player src="https://assets4.lottiefiles.com/datafiles/zc3XRzudyWE36ZBJr7PIkkqq0PFIrIBgp4ojqShI/newAnimation.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
 			<div class="block">
 				<h2 class="title">그린카 개선사항 설문조사</h2>
 		
@@ -236,7 +236,7 @@
 
 			<div class="btn-wrap">
 				<div class="btn-group">
-					<button type="button" class="btn xl full" disabled="">설문조사 제출</button>
+					<button type="button" class="btn xl" disabled="">설문조사 제출</button>
 				</div>
 			</div>
 
