--- a/src/status.html
+++ b/src/status.html
@@ -1268,9 +1268,11 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0401_M01.html">SCR_GA_CI_0401_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220905
+							</td>
                             <td>제휴처 디자인 수정 필요</td>
                         </tr>
                         <tr>
@@ -1282,9 +1284,11 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P01">SCR_GA_CI_0401_P01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220905
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1296,9 +1300,11 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P02">SCR_GA_CI_0401_P02.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220905
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1310,7 +1316,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P03#full">SCR_GA_CI_0401_P03.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1324,10 +1330,12 @@
                             <td>이민우</td>
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P04#full">SCR_GA_CI_0401_P04.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="stat"></td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220905
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1339,7 +1347,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P05#full">SCR_GA_CI_0401_P05.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1353,7 +1361,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0501_M01.html">SCR_GA_CI_0501_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2313,7 +2321,9 @@
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0101_M01.html">SCR_GA_AR_0101_M01.html</a></td>
 							<td class="stat">⚪</td>
 							<td class="date"></td>
-                            <td class="compl"></td>
+                            <td class="compl">
+								20220905
+							</td>
 							<td></td>
 						</tr>
 						<tr>
