내정보 디자인 수정 처리

--- a/src/html/mypage/SCR_GA_CI_0601_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0601_M01.html
@@ -26,6 +26,24 @@
                                     <button class="btn icon md">
                                         <i class="ico info lg"></i>
                                     </button>
+									<!-- 20220906 -->
+									<div class="tip-layer-module">
+										<div class="box">
+											<ul class="list">
+												<li>
+													이달 소멸 예정인 포인트입니다.
+												</li>
+												<li>
+													포인트는 유효기간 경과 시 자동으로 소멸됩니다.
+												</li>
+												<li>
+													적립일~유효기간을 참고하세요
+												</li>
+											</ul>
+											<button type="button" class="btn-close"><span class="hide-txt">닫기</span></button>
+										</div>
+									</div>
+									<!-- //20220906 -->
                                 </div>
                                 <div class="right">
                                     <span class="value">-100P</span>
