--- a/src/html/mypage/SCR_GA_CI_1201_M01.html
+++ b/src/html/mypage/SCR_GA_CI_1201_M01.html
@@ -16,9 +16,11 @@
 					<div class="mypage">
 						<div class="payment">
 
-							<p class="desc-xs">
+							<!-- 20220906 -->
+							<p class="desc-sm">
 								나의 결제수단 <span class="count">5</span>
 							</p>
+							<!-- //20220906 -->
 
 							<div class="paymnet-list">
 								<div class="item">
