--- a/src/status.html
+++ b/src/status.html
@@ -1269,7 +1269,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0401_M01.html">SCR_GA_CI_0401_M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220905
 							</td>
@@ -1285,7 +1285,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P01">SCR_GA_CI_0401_P01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220905
 							</td>
@@ -1301,7 +1301,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P02">SCR_GA_CI_0401_P02.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220905
 							</td>
@@ -1317,7 +1317,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P03#full">SCR_GA_CI_0401_P03.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1331,8 +1331,7 @@
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P04#full">SCR_GA_CI_0401_P04.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="stat"></td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220905
 							</td>
@@ -1348,7 +1347,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P05#full">SCR_GA_CI_0401_P05.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1362,7 +1361,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0501_M01.html">SCR_GA_CI_0501_M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1375,7 +1374,7 @@
                             <td></td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0502_M01.html">SCR_GA_CI_0502_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1389,9 +1388,11 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0601_M01.html">SCR_GA_CI_0601_M01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
+                            <td class="date">
+								20220906
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1403,8 +1404,8 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0601_M01_01.html">SCR_GA_CI_0601_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1417,8 +1418,10 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0602_M01.html">SCR_GA_CI_0602_M01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">
+								20220906
+							</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1431,8 +1434,10 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0602_M01_01.html">SCR_GA_CI_0602_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">
+								20220906
+							</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1445,7 +1450,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0801_M01.html">SCR_GA_CI_0801_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1459,7 +1464,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0801_P01#full">SCR_GA_CI_0801_P01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
@@ -1475,7 +1480,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01.html">SCR_GA_CI_0901 _M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1489,7 +1494,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01.html">SCR_GA_CI_0903_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1503,7 +1508,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_01.html">SCR_GA_CI_0903_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1517,7 +1522,7 @@
                             <td>박지수</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_02.html">SCR_GA_CI_0903_M01_02.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1545,9 +1550,11 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1201_M01.html">SCR_GA_CI_1201_M01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
+                            <td class="date">
+								20220906
+							</td>
                             <td></td>
                         </tr>
 						<tr>
@@ -1559,7 +1566,7 @@
                             <td>이민우</td>
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_M01_P01#bottom">SCR_GA_CI_1201_M01_P01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1573,7 +1580,7 @@
                             <td>이민우</td>
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_P01">SCR_GA_CI_1201_P01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date">
 								20220831
